argocd/apps/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: default
spec:
  selector:
    app: open-webui
  ports:
    - port: 80
      targetPort: 8080
      name: http
